qualitas-analysis/multi-front-end/parse.output
State 357 conflicts: 15 reduce/reduce


Grammar

    0 $accept: start $end

    1 start: file_input

    2 file_input: star_NEWLINE_stmt ENDMARKER

    3 pick_NEWLINE_stmt: NEWLINE
    4                  | stmt

    5 star_NEWLINE_stmt: star_NEWLINE_stmt pick_NEWLINE_stmt
    6                  | %empty

    7 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT dotted_name NEWLINE

    9 opt_arglist: arglist
   10            | %empty

   11 decorators: decorators decorator
   12           | decorator

   13 decorated: decorators classdef
   14          | decorators funcdef

   15 funcdef: DEF NAME parameters ARROW test COLON suite
   16        | DEF NAME parameters COLON suite

   17 parameters: LPAR typedargslist RPAR
   18           | LPAR RPAR

   19 typedargslist: star_tfpdef_COMMA pick_STAR_DOUBLESTAR_tfpdef
   20              | star_tfpdef_COMMA tfpdef opt_EQUAL_test opt_COMMA

   21 opt_EQUAL_test: EQUAL test
   22               | %empty

   23 opt_tfpdef: tfpdef
   24           | %empty

   25 star_COMMA_tfpdef: star_COMMA_tfpdef COMMA tfpdef opt_EQUAL_test
   26                  | %empty

   27 opt_DOUBLESTAR_tfpdef: COMMA DOUBLESTAR tfpdef
   28                      | %empty

   29 pick_STAR_DOUBLESTAR_tfpdef: STAR opt_tfpdef star_COMMA_tfpdef opt_DOUBLESTAR_tfpdef
   30                            | DOUBLESTAR tfpdef

   31 opt_COMMA: COMMA
   32          | %empty

   33 tfpdef: NAME COLON test
   34       | NAME

   35 varargslist: star_vfpdef_COMMA pick_STAR_DOUBLESTAR_vfpdef
   36            | star_vfpdef_COMMA vfpdef opt_EQUAL_test opt_COMMA

   37 opt_vfpdef: vfpdef
   38           | %empty

   39 star_COMMA_vfpdef: star_COMMA_vfpdef COMMA vfpdef opt_EQUAL_test
   40                  | %empty

   41 opt_DOUBLESTAR_vfpdef: COMMA DOUBLESTAR vfpdef
   42                      | %empty

   43 pick_STAR_DOUBLESTAR_vfpdef: STAR opt_vfpdef star_COMMA_vfpdef opt_DOUBLESTAR_vfpdef
   44                            | DOUBLESTAR vfpdef

   45 vfpdef: NAME

   46 stmt: simple_stmt
   47     | compound_stmt

   48 simple_stmt: small_stmt star_SEMI_small_stmt SEMI NEWLINE
   49            | small_stmt star_SEMI_small_stmt NEWLINE

   50 star_SEMI_small_stmt: star_SEMI_small_stmt SEMI small_stmt
   51                     | %empty

   52 small_stmt: expr_stmt
   53           | del_stmt
   54           | pass_stmt
   55           | flow_stmt
   56           | import_stmt
   57           | global_stmt
   58           | nonlocal_stmt
   59           | assert_stmt

   60 expr_stmt: testlist augassign pick_yield_expr_testlist
   61          | testlist star_EQUAL

   62 pick_yield_expr_testlist: yield_expr
   63                         | testlist

   64 star_EQUAL: star_EQUAL EQUAL pick_yield_expr_testlist
   65           | %empty

   66 augassign: PLUSEQUAL
   67          | MINEQUAL
   68          | STAREQUAL
   69          | SLASHEQUAL
   70          | PERCENTEQUAL
   71          | AMPEREQUAL
   72          | VBAREQUAL
   73          | CIRCUMFLEXEQUAL
   74          | LEFTSHIFTEQUAL
   75          | RIGHTSHIFTEQUAL
   76          | DOUBLESTAREQUAL
   77          | DOUBLESLASHEQUAL

   78 del_stmt: DEL exprlist

   79 pass_stmt: PASS

   80 flow_stmt: break_stmt
   81          | continue_stmt
   82          | return_stmt
   83          | raise_stmt
   84          | yield_stmt

   85 break_stmt: BREAK

   86 continue_stmt: CONTINUE

   87 return_stmt: RETURN testlist
   88            | RETURN

   89 yield_stmt: yield_expr

   90 raise_stmt: RAISE test opt_FROM_test
   91           | RAISE

   92 opt_FROM_test: FROM test
   93              | %empty

   94 import_stmt: import_name
   95            | import_from

   96 import_name: IMPORT dotted_as_names

   97 import_from: FROM pick_dotted_name IMPORT pick_STAR_import

   98 pick_DOT_THREE_DOTS: DOT
   99                    | THREE_DOTS

  100 pick_dotted_name: star_DOT dotted_name
  101                 | star_DOT pick_DOT_THREE_DOTS

  102 pick_STAR_import: STAR
  103                 | LPAR import_as_names RPAR
  104                 | import_as_names

  105 import_as_name: NAME AS NAME
  106               | NAME

  107 dotted_as_name: dotted_name AS NAME
  108               | dotted_name

  109 import_as_names: import_as_name star_COMMA_import_as_name COMMA
  110                | import_as_name star_COMMA_import_as_name

  111 star_COMMA_import_as_name: star_COMMA_import_as_name COMMA import_as_name
  112                          | %empty

  113 dotted_as_names: dotted_as_name
  114                | dotted_as_names COMMA dotted_as_name

  115 dotted_name: NAME
  116            | dotted_name DOT NAME

  117 global_stmt: GLOBAL NAME star_COMMA_NAME

  118 star_COMMA_NAME: star_COMMA_NAME COMMA NAME
  119                | %empty

  120 nonlocal_stmt: NONLOCAL NAME star_COMMA_NAME

  121 assert_stmt: ASSERT test COMMA test
  122            | ASSERT test

  123 compound_stmt: if_stmt
  124              | while_stmt
  125              | for_stmt
  126              | try_stmt
  127              | with_stmt
  128              | funcdef
  129              | classdef
  130              | decorated

  131 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  132        | IF test COLON suite star_ELIF

  133 star_ELIF: star_ELIF ELIF test COLON suite
  134          | %empty

  135 while_stmt: WHILE test COLON suite ELSE COLON suite
  136           | WHILE test COLON suite

  137 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  138         | FOR exprlist IN testlist COLON suite

  139 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  140         | TRY COLON suite FINALLY COLON suite

  141 plus_except: plus_except except_clause COLON suite
  142            | except_clause COLON suite

  143 opt_ELSE: ELSE COLON suite
  144         | %empty

  145 opt_FINALLY: FINALLY COLON suite
  146            | %empty

  147 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  148 star_COMMA_with_item: star_COMMA_with_item COMMA with_item
  149                     | %empty

  150 with_item: test AS expr
  151          | test

  152 except_clause: EXCEPT test opt_AS_NAME
  153              | EXCEPT

  154 opt_AS_NAME: AS NAME
  155            | %empty

  156 suite: simple_stmt
  157      | NEWLINE INDENT plus_stmt DEDENT

  158 plus_stmt: plus_stmt stmt
  159          | stmt

  160 test: or_test opt_IF_ELSE
  161     | lambdef

  162 opt_IF_ELSE: IF or_test ELSE test
  163            | %empty

  164 test_nocond: or_test
  165            | lambdef_nocond

  166 lambdef: LAMBDA varargslist COLON test
  167        | LAMBDA COLON test

  168 lambdef_nocond: LAMBDA varargslist COLON test_nocond
  169               | LAMBDA COLON test_nocond

  170 or_test: and_test
  171        | or_test OR and_test

  172 and_test: not_test
  173         | and_test AND not_test

  174 not_test: NOT not_test
  175         | comparison

  176 comparison: star_expr
  177           | comparison comp_op star_expr

  178 comp_op: LESS
  179        | GREATER
  180        | EQEQUAL
  181        | GREATEREQUAL
  182        | LESSEQUAL
  183        | GRLT
  184        | NOTEQUAL
  185        | IN
  186        | NOT IN
  187        | IS
  188        | IS NOT

  189 star_expr: STAR expr
  190          | expr

  191 expr: xor_expr
  192     | expr BAR xor_expr

  193 xor_expr: and_expr
  194         | xor_expr CIRCUMFLEX and_expr

  195 and_expr: shift_expr
  196         | and_expr AMPERSAND shift_expr

  197 shift_expr: arith_expr
  198           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  199 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  200                          | RIGHTSHIFT

  201 arith_expr: term
  202           | arith_expr pick_PLUS_MINUS term

  203 pick_PLUS_MINUS: PLUS
  204                | MINUS

  205 term: factor
  206     | term pick_multop factor

  207 pick_multop: STAR
  208            | SLASH
  209            | PERCENT
  210            | DOUBLESLASH

  211 factor: pick_unop factor
  212       | power

  213 pick_unop: PLUS
  214          | MINUS
  215          | TILDE

  216 power: atom star_trailer DOUBLESTAR factor
  217      | atom star_trailer

  218 star_trailer: star_trailer trailer
  219             | %empty

  220 atom: LPAR opt_yield_test RPAR
  221     | LSQB opt_testlist_comp RSQB
  222     | LBRACE opt_dictorsetmaker RBRACE
  223     | NAME
  224     | NUMBER
  225     | plus_STRING
  226     | THREE_DOTS
  227     | NONE
  228     | TRUE
  229     | FALSE

  230 pick_yield_expr_testlist_comp: yield_expr
  231                              | testlist_comp

  232 opt_yield_test: pick_yield_expr_testlist_comp
  233               | %empty

  234 opt_testlist_comp: testlist_comp
  235                  | %empty

  236 opt_dictorsetmaker: dictorsetmaker
  237                   | %empty

  238 plus_STRING: plus_STRING STRING
  239            | STRING

  240 testlist_comp: test comp_for
  241              | test star_COMMA_test opt_COMMA

  242 star_COMMA_test: star_COMMA_test COMMA test
  243                | %empty

  244 trailer: LPAR opt_arglist RPAR
  245        | LSQB subscriptlist RSQB
  246        | DOT NAME

  247 subscriptlist: subscript star_COMMA_subscript COMMA
  248              | subscript star_COMMA_subscript

  249 star_COMMA_subscript: star_COMMA_subscript COMMA subscript
  250                     | %empty

  251 subscript: test
  252          | opt_test_only COLON opt_test_only opt_sliceop

  253 opt_test_only: test
  254              | %empty

  255 opt_sliceop: sliceop
  256            | %empty

  257 sliceop: COLON test
  258        | COLON

  259 exprlist: star_expr star_COMMA_star_expr COMMA
  260         | star_expr star_COMMA_star_expr

  261 star_COMMA_star_expr: star_COMMA_star_expr COMMA star_expr
  262                     | %empty

  263 testlist: test star_COMMA_test COMMA
  264         | test star_COMMA_test

  265 dictorsetmaker: test COLON test pick_for_test_test
  266               | test pick_for_test

  267 star_test_COLON_test: star_test_COLON_test COMMA test COLON test
  268                     | %empty

  269 pick_for_test_test: comp_for
  270                   | star_test_COLON_test opt_COMMA

  271 pick_for_test: comp_for
  272              | star_COMMA_test opt_COMMA

  273 classdef: CLASS NAME LPAR opt_arglist RPAR COLON suite
  274         | CLASS NAME COLON suite

  275 arglist: star_argument_COMMA pick_argument

  276 star_argument_COMMA: star_argument_COMMA argument COMMA
  277                    | %empty

  278 star_COMMA_argument: star_COMMA_argument COMMA argument
  279                    | %empty

  280 opt_DOUBLESTAR_test: COMMA DOUBLESTAR test
  281                    | %empty

  282 pick_argument: argument opt_COMMA
  283              | STAR test star_COMMA_argument opt_DOUBLESTAR_test
  284              | DOUBLESTAR test

  285 argument: test opt_comp_for
  286         | test EQUAL test

  287 opt_comp_for: comp_for
  288             | %empty

  289 comp_iter: comp_for
  290          | comp_if

  291 comp_for: FOR exprlist IN or_test comp_iter
  292         | FOR exprlist IN or_test

  293 comp_if: IF test_nocond comp_iter
  294        | IF test_nocond

  295 yield_expr: YIELD testlist
  296           | YIELD

  297 star_tfpdef_COMMA: star_tfpdef_COMMA tfpdef opt_EQUAL_test COMMA
  298                  | %empty

  299 star_vfpdef_COMMA: star_vfpdef_COMMA vfpdef opt_EQUAL_test COMMA
  300                  | %empty

  301 star_DOT: star_DOT pick_DOT_THREE_DOTS
  302         | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 71
AMPERSAND (259) 196
AND (260) 173
ARROW (261) 15
AS (262) 105 107 150 154
ASSERT (263) 121 122
AT (264) 7 8
BAR (265) 192
BREAK (266) 85
CIRCUMFLEX (267) 194
CIRCUMFLEXEQUAL (268) 73
CLASS (269) 273 274
COLON (270) 15 16 33 131 132 133 135 136 137 138 139 140 141 142 143
    145 147 166 167 168 169 252 257 258 265 267 273 274
COMMA (271) 25 27 31 39 41 109 111 114 118 121 148 242 247 249 259
    261 263 267 276 278 280 297 299
CONTINUE (272) 86
DEDENT (273) 157
DEF (274) 15 16
DEL (275) 78
DOT (276) 98 116 246
DOUBLESLASH (277) 210
DOUBLESLASHEQUAL (278) 77
DOUBLESTAR (279) 27 30 41 44 216 280 284
DOUBLESTAREQUAL (280) 76
ELIF (281) 133
ELSE (282) 131 135 137 143 162
ENDMARKER (283) 2
EQEQUAL (284) 180
EQUAL (285) 21 64 286
EXCEPT (286) 152 153
FALSE (287) 229
FINALLY (288) 140 145
FOR (289) 137 138 291 292
FROM (290) 92 97
GLOBAL (291) 117
GREATER (292) 179
GREATEREQUAL (293) 181
GRLT (294) 183
IF (295) 131 132 162 293 294
IMPORT (296) 96 97
IN (297) 137 138 185 186 291 292
INDENT (298) 157
IS (299) 187 188
LAMBDA (300) 166 167 168 169
LBRACE (301) 222
LEFTSHIFT (302) 199
LEFTSHIFTEQUAL (303) 74
LESS (304) 178
LESSEQUAL (305) 182
LPAR (306) 7 17 18 103 220 244 273
LSQB (307) 221 245
MINEQUAL (308) 67
MINUS (309) 204 214
NAME (310) 15 16 33 34 45 105 106 107 115 116 117 118 120 154 223 246
    273 274
NEWLINE (311) 3 7 8 48 49 157
NONE (312) 227
NONLOCAL (313) 120
NOT (314) 174 186 188
NOTEQUAL (315) 184
NUMBER (316) 224
OR (317) 171
PASS (318) 79
PERCENT (319) 209
PERCENTEQUAL (320) 70
PLUS (321) 203 213
PLUSEQUAL (322) 66
RAISE (323) 90 91
RBRACE (324) 222
RETURN (325) 87 88
RIGHTSHIFT (326) 200
RIGHTSHIFTEQUAL (327) 75
RPAR (328) 7 17 18 103 220 244 273
RSQB (329) 221 245
SEMI (330) 48 50
SLASH (331) 208
SLASHEQUAL (332) 69
STAR (333) 29 43 102 189 207 283
STAREQUAL (334) 68
STRING (335) 238 239
THREE_DOTS (336) 99 226
TILDE (337) 215
TRUE (338) 228
TRY (339) 139 140
VBAREQUAL (340) 72
WHILE (341) 135 136
WITH (342) 147
YIELD (343) 295 296


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
start (90)
    on left: 1, on right: 0
file_input (91)
    on left: 2, on right: 1
pick_NEWLINE_stmt (92)
    on left: 3 4, on right: 5
star_NEWLINE_stmt (93)
    on left: 5 6, on right: 2 5
decorator (94)
    on left: 7 8, on right: 11 12
opt_arglist (95)
    on left: 9 10, on right: 7 244 273
decorators (96)
    on left: 11 12, on right: 11 13 14
decorated (97)
    on left: 13 14, on right: 130
funcdef (98)
    on left: 15 16, on right: 14 128
parameters (99)
    on left: 17 18, on right: 15 16
typedargslist (100)
    on left: 19 20, on right: 17
opt_EQUAL_test (101)
    on left: 21 22, on right: 20 25 36 39 297 299
opt_tfpdef (102)
    on left: 23 24, on right: 29
star_COMMA_tfpdef (103)
    on left: 25 26, on right: 25 29
opt_DOUBLESTAR_tfpdef (104)
    on left: 27 28, on right: 29
pick_STAR_DOUBLESTAR_tfpdef (105)
    on left: 29 30, on right: 19
opt_COMMA (106)
    on left: 31 32, on right: 20 36 241 270 272 282
tfpdef (107)
    on left: 33 34, on right: 20 23 25 27 30 297
varargslist (108)
    on left: 35 36, on right: 166 168
opt_vfpdef (109)
    on left: 37 38, on right: 43
star_COMMA_vfpdef (110)
    on left: 39 40, on right: 39 43
opt_DOUBLESTAR_vfpdef (111)
    on left: 41 42, on right: 43
pick_STAR_DOUBLESTAR_vfpdef (112)
    on left: 43 44, on right: 35
vfpdef (113)
    on left: 45, on right: 36 37 39 41 44 299
stmt (114)
    on left: 46 47, on right: 4 158 159
simple_stmt (115)
    on left: 48 49, on right: 46 156
star_SEMI_small_stmt (116)
    on left: 50 51, on right: 48 49 50
small_stmt (117)
    on left: 52 53 54 55 56 57 58 59, on right: 48 49 50
expr_stmt (118)
    on left: 60 61, on right: 52
pick_yield_expr_testlist (119)
    on left: 62 63, on right: 60 64
star_EQUAL (120)
    on left: 64 65, on right: 61 64
augassign (121)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77, on right: 60
del_stmt (122)
    on left: 78, on right: 53
pass_stmt (123)
    on left: 79, on right: 54
flow_stmt (124)
    on left: 80 81 82 83 84, on right: 55
break_stmt (125)
    on left: 85, on right: 80
continue_stmt (126)
    on left: 86, on right: 81
return_stmt (127)
    on left: 87 88, on right: 82
yield_stmt (128)
    on left: 89, on right: 84
raise_stmt (129)
    on left: 90 91, on right: 83
opt_FROM_test (130)
    on left: 92 93, on right: 90
import_stmt (131)
    on left: 94 95, on right: 56
import_name (132)
    on left: 96, on right: 94
import_from (133)
    on left: 97, on right: 95
pick_DOT_THREE_DOTS (134)
    on left: 98 99, on right: 101 301
pick_dotted_name (135)
    on left: 100 101, on right: 97
pick_STAR_import (136)
    on left: 102 103 104, on right: 97
import_as_name (137)
    on left: 105 106, on right: 109 110 111
dotted_as_name (138)
    on left: 107 108, on right: 113 114
import_as_names (139)
    on left: 109 110, on right: 103 104
star_COMMA_import_as_name (140)
    on left: 111 112, on right: 109 110 111
dotted_as_names (141)
    on left: 113 114, on right: 96 114
dotted_name (142)
    on left: 115 116, on right: 7 8 100 107 108 116
global_stmt (143)
    on left: 117, on right: 57
star_COMMA_NAME (144)
    on left: 118 119, on right: 117 118 120
nonlocal_stmt (145)
    on left: 120, on right: 58
assert_stmt (146)
    on left: 121 122, on right: 59
compound_stmt (147)
    on left: 123 124 125 126 127 128 129 130, on right: 47
if_stmt (148)
    on left: 131 132, on right: 123
star_ELIF (149)
    on left: 133 134, on right: 131 132 133
while_stmt (150)
    on left: 135 136, on right: 124
for_stmt (151)
    on left: 137 138, on right: 125
try_stmt (152)
    on left: 139 140, on right: 126
plus_except (153)
    on left: 141 142, on right: 139 141
opt_ELSE (154)
    on left: 143 144, on right: 139
opt_FINALLY (155)
    on left: 145 146, on right: 139
with_stmt (156)
    on left: 147, on right: 127
star_COMMA_with_item (157)
    on left: 148 149, on right: 147 148
with_item (158)
    on left: 150 151, on right: 147 148
except_clause (159)
    on left: 152 153, on right: 141 142
opt_AS_NAME (160)
    on left: 154 155, on right: 152
suite (161)
    on left: 156 157, on right: 15 16 131 132 133 135 136 137 138 139
    140 141 142 143 145 147 273 274
plus_stmt (162)
    on left: 158 159, on right: 157 158
test (163)
    on left: 160 161, on right: 15 21 33 90 92 121 122 131 132 133
    135 136 150 151 152 162 166 167 240 241 242 251 253 257 263 264
    265 266 267 280 283 284 285 286
opt_IF_ELSE (164)
    on left: 162 163, on right: 160
test_nocond (165)
    on left: 164 165, on right: 168 169 293 294
lambdef (166)
    on left: 166 167, on right: 161
lambdef_nocond (167)
    on left: 168 169, on right: 165
or_test (168)
    on left: 170 171, on right: 160 162 164 171 291 292
and_test (169)
    on left: 172 173, on right: 170 171 173
not_test (170)
    on left: 174 175, on right: 172 173 174
comparison (171)
    on left: 176 177, on right: 175 177
comp_op (172)
    on left: 178 179 180 181 182 183 184 185 186 187 188, on right:
    177
star_expr (173)
    on left: 189 190, on right: 176 177 259 260 261
expr (174)
    on left: 191 192, on right: 150 189 190 192
xor_expr (175)
    on left: 193 194, on right: 191 192 194
and_expr (176)
    on left: 195 196, on right: 193 194 196
shift_expr (177)
    on left: 197 198, on right: 195 196 198
pick_LEFTSHIFT_RIGHTSHIFT (178)
    on left: 199 200, on right: 198
arith_expr (179)
    on left: 201 202, on right: 197 198 202
pick_PLUS_MINUS (180)
    on left: 203 204, on right: 202
term (181)
    on left: 205 206, on right: 201 202 206
pick_multop (182)
    on left: 207 208 209 210, on right: 206
factor (183)
    on left: 211 212, on right: 205 206 211 216
pick_unop (184)
    on left: 213 214 215, on right: 211
power (185)
    on left: 216 217, on right: 212
star_trailer (186)
    on left: 218 219, on right: 216 217 218
atom (187)
    on left: 220 221 222 223 224 225 226 227 228 229, on right: 216
    217
pick_yield_expr_testlist_comp (188)
    on left: 230 231, on right: 232
opt_yield_test (189)
    on left: 232 233, on right: 220
opt_testlist_comp (190)
    on left: 234 235, on right: 221
opt_dictorsetmaker (191)
    on left: 236 237, on right: 222
plus_STRING (192)
    on left: 238 239, on right: 225 238
testlist_comp (193)
    on left: 240 241, on right: 231 234
star_COMMA_test (194)
    on left: 242 243, on right: 241 242 263 264 272
trailer (195)
    on left: 244 245 246, on right: 218
subscriptlist (196)
    on left: 247 248, on right: 245
star_COMMA_subscript (197)
    on left: 249 250, on right: 247 248 249
subscript (198)
    on left: 251 252, on right: 247 248 249
opt_test_only (199)
    on left: 253 254, on right: 252
opt_sliceop (200)
    on left: 255 256, on right: 252
sliceop (201)
    on left: 257 258, on right: 255
exprlist (202)
    on left: 259 260, on right: 78 137 138 291 292
star_COMMA_star_expr (203)
    on left: 261 262, on right: 259 260 261
testlist (204)
    on left: 263 264, on right: 60 61 63 87 137 138 295
dictorsetmaker (205)
    on left: 265 266, on right: 236
star_test_COLON_test (206)
    on left: 267 268, on right: 267 270
pick_for_test_test (207)
    on left: 269 270, on right: 265
pick_for_test (208)
    on left: 271 272, on right: 266
classdef (209)
    on left: 273 274, on right: 13 129
arglist (210)
    on left: 275, on right: 9
star_argument_COMMA (211)
    on left: 276 277, on right: 275 276
star_COMMA_argument (212)
    on left: 278 279, on right: 278 283
opt_DOUBLESTAR_test (213)
    on left: 280 281, on right: 283
pick_argument (214)
    on left: 282 283 284, on right: 275
argument (215)
    on left: 285 286, on right: 276 278 282
opt_comp_for (216)
    on left: 287 288, on right: 285
comp_iter (217)
    on left: 289 290, on right: 291 293
comp_for (218)
    on left: 291 292, on right: 240 269 271 287 289
comp_if (219)
    on left: 293 294, on right: 290
yield_expr (220)
    on left: 295 296, on right: 62 89 230
star_tfpdef_COMMA (221)
    on left: 297 298, on right: 19 20 297
star_vfpdef_COMMA (222)
    on left: 299 300, on right: 35 36 299
star_DOT (223)
    on left: 301 302, on right: 100 101 301


State 0

    0 $accept: . start $end

    $default  reduce using rule 6 (star_NEWLINE_stmt)

    start              go to state 1
    file_input         go to state 2
    star_NEWLINE_stmt  go to state 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    1 start: file_input .

    $default  reduce using rule 1 (start)


State 3

    2 file_input: star_NEWLINE_stmt . ENDMARKER
    5 star_NEWLINE_stmt: star_NEWLINE_stmt . pick_NEWLINE_stmt

    ASSERT      shift, and go to state 5
    AT          shift, and go to state 6
    BREAK       shift, and go to state 7
    CLASS       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    DEF         shift, and go to state 10
    DEL         shift, and go to state 11
    ENDMARKER   shift, and go to state 12
    FALSE       shift, and go to state 13
    FOR         shift, and go to state 14
    FROM        shift, and go to state 15
    GLOBAL      shift, and go to state 16
    IF          shift, and go to state 17
    IMPORT      shift, and go to state 18
    LAMBDA      shift, and go to state 19
    LBRACE      shift, and go to state 20
    LPAR        shift, and go to state 21
    LSQB        shift, and go to state 22
    MINUS       shift, and go to state 23
    NAME        shift, and go to state 24
    NEWLINE     shift, and go to state 25
    NONE        shift, and go to state 26
    NONLOCAL    shift, and go to state 27
    NOT         shift, and go to state 28
    NUMBER      shift, and go to state 29
    PASS        shift, and go to state 30
    PLUS        shift, and go to state 31
    RAISE       shift, and go to state 32
    RETURN      shift, and go to state 33
    STAR        shift, and go to state 34
    STRING      shift, and go to state 35
    THREE_DOTS  shift, and go to state 36
    TILDE       shift, and go to state 37
    TRUE        shift, and go to state 38
    TRY         shift, and go to state 39
    WHILE       shift, and go to state 40
    WITH        shift, and go to state 41
    YIELD       shift, and go to state 42

    pick_NEWLINE_stmt  go to state 43
    decorator          go to state 44
    decorators         go to state 45
    decorated          go to state 46
    funcdef            go to state 47
    stmt               go to state 48
    simple_stmt        go to state 49
    small_stmt         go to state 50
    expr_stmt          go to state 51
    del_stmt           go to state 52
    pass_stmt          go to state 53
    flow_stmt          go to state 54
    break_stmt         go to state 55
    continue_stmt      go to state 56
    return_stmt        go to state 57
    yield_stmt         go to state 58
    raise_stmt         go to state 59
    import_stmt        go to state 60
    import_name        go to state 61
    import_from        go to state 62
    global_stmt        go to state 63
    nonlocal_stmt      go to state 64
    assert_stmt        go to state 65
    compound_stmt      go to state 66
    if_stmt            go to state 67
    while_stmt         go to state 68
    for_stmt           go to state 69
    try_stmt           go to state 70
    with_stmt          go to state 71
    test               go to state 72
    lambdef            go to state 73
    or_test            go to state 74
    and_test           go to state 75
    not_test           go to state 76
    comparison         go to state 77
    star_expr          go to state 78
    expr               go to state 79
    xor_expr           go to state 80
    and_expr           go to state 81
    shift_expr         go to state 82
    arith_expr         go to state 83
    term               go to state 84
    factor             go to state 85
    pick_unop          go to state 86
    power              go to state 87
    atom               go to state 88
    plus_STRING        go to state 89
    testlist           go to state 90
    classdef           go to state 91
    yield_expr         go to state 92


State 4

    0 $accept: start $end .

    $default  accept


State 5

  121 assert_stmt: ASSERT . test COMMA test
  122            | ASSERT . test

    FALSE       shift, and go to state 13
    LAMBDA      shift, and go to state 19
    LBRACE      shift, and go to state 20
    LPAR        shift, and go to state 21
    LSQB        shift, and go to state 22
    MINUS       shift, and go to state 23
    NAME        shift, and go to state 24
    NONE        shift, and go to state 26
    NOT         shift, and go to state 28
    NUMBER      shift, and go to state 29
    PLUS        shift, and go to state 31
    STAR        shift, and go to state 34
    STRING      shift, and go to state 35
    THREE_DOTS  shift, and go to state 36
    TILDE       shift, and go to state 37
    TRUE        shift, and go to state 38

    test         go to state 93
    lambdef      go to state 73
    or_test      go to state 74
    and_test     go to state 75
    not_test     go to state 76
    comparison   go to state 77
    star_expr    go to state 78
    expr         go to state 79
    xor_expr     go to state 80
    and_expr     go to state 81
    shift_expr   go to state 82
    arith_expr   go to state 83
    term         go to state 84
    factor       go to state 85
    pick_unop    go to state 86
    power        go to state 87
    atom         go to state 88
    plus_STRING  go to state 89


State 6

    7 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 94

    dotted_name  go to state 95


State 7

   85 break_stmt: BREAK .

    $default  reduce using rule 85 (break_stmt)


State 8

  273 classdef: CLASS . NAME LPAR opt_arglist RPAR COLON suite
  274         | CLASS . NAME COLON suite

    NAME  shift, and go to state 96


State 9

   86 continue_stmt: CONTINUE .

    $default  reduce using rule 86 (continue_stmt)


State 10

   15 funcdef: DEF . NAME parameters ARROW test COLON suite
   16        | DEF . NAME parameters COLON suite

    NAME  shift, and go to state 97


State 11

   78 del_stmt: DEL . exprlist

    FALSE       shift, and go to state 13
    LBRACE      shift, and go to state 20
    LPAR        shift, and go to state 21
    LSQB        shift, and go to state 22
    MINUS       shift, and go to state 23
    NAME        shift, and go to state 24
    NONE        shift, and go to state 26
    NUMBER      shift, and go to state 29
    PLUS        shift, and go to state 31
    STAR        shift, and go to state 34
    STRING      shift, and go to state 35
    THREE_DOTS  shift, and go to state 36
    TILDE       shift, and go to state 37
    TRUE        shift, and go to state 38

    star_expr    go to state 98
    expr         go to state 79
    xor_expr     go to state 80
    and_expr     go to state 81
    shift_expr   go to state 82
    arith_expr   go to state 83
    term         go to state 84
    factor       go to state 85
    pick_unop    go to state 86
    power        go to state 87
    atom         go to state 88
    plus_STRING  go to state 89
    exprlist     go to state 99


State 12

    2 file_input: star_NEWLINE_stmt ENDMARKER .

    $default  reduce using rule 2 (file_input)


State 13

  229 atom: FALSE .

    $default  reduce using rule 229 (atom)


State 14

  137 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  138         | FOR . exprlist IN testlist COLON suite

    FALSE       shift, and go to state 13
    LBRACE      shift, and go to state 20
    LPAR        shift, and go to state 21
    LSQB        shift, and go to state 22
    MINUS       shift, and go to state 23
    NAME        shift, and go to state 24
    NONE        shift, and go to state 26
    NUMBER      shift, and go to state 29
    PLUS        shift, and go to state 31
    STAR        shift, and go to state 34
    STRING      shift, and go to state 35
    THREE_DOTS  shift, and go to state 36
    TILDE       shift, and go to state 37
    TRUE        shift, and go to state 38

    star_expr    go to state 98
    expr         go to state 79
    xor_expr     go to state 80
    and_expr     go to state 81
    shift_expr   go to state 82
    arith_expr   go to state 83
    term         go to state 84
    factor       go to state 85
    pick_unop    go to state 86
    power        go to state 87
    atom         go to state 88
    plus_STRING  go to state 89
    exprlist     go to state 100


State 15

   97 import_from: FROM . pick_dotted_name IMPORT pick_STAR_import

    $default  reduce using rule 302 (star_DOT)

    pick_dotted_name  go to state 101
    star_DOT          go to state 102


State 16

  117 global_stmt: GLOBAL . NAME star_COMMA_NAME

    NAME  shift, and go to state 103


State 17

  131 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  132        | IF . test COLON suite star_ELIF

    FALSE       shift, and go to state 13
    LAMBDA      shift, and go to state 19
    LBRACE      shift, and go to state 20
    LPAR        shift, and go to state 21
    LSQB        shift, and go to state 22
    MINUS       shift, and go to state 23
    NAME        shift, and go to state 24
    NONE        shift, and go to state 26
    NOT         shift, and go to state 28
    NUMBER      shift, and go to state 29
    PLUS        shift, and go to state 31
    STAR        shift, and go to state 34
    STRING      shift, and go to state 35
    THREE_DOTS  shift, and go to state 36
    TILDE       shift, and go to state 37
    TRUE        shift, and go to state 38

    test         go to state 104
    lambdef      go to state 73
    or_test      go to state 74
    and_test     go to state 75
    not_test     go to state 76
    comparison   go to state 77
    star_expr    go to state 78
    expr         go to state 79
    xor_expr     go to state 80
    and_expr     go to state 81
    shift_expr   go to state 82
    arith_expr   go to state 83
    term         go to state 84
    factor       go to state 85
    pick_unop    go to state 86
    power        go to state 87
    atom         go to state 88
    plus_STRING  go to state 89


State 18

   96 import_name: IMPORT . dotted_as_names

    NAME  shift, and go to state 94

    dotted_as_name   go to state 105
    dotted_as_names  go to state 106
    dotted_name      go to state 107


State 19

  166 lambdef: LAMBDA . varargslist COLON test
  167        | LAMBDA . COLON test

    COLON  shift, and go to state 108

    $default  reduce using rule 300 (star_vfpdef_COMMA)

    varargslist        go to state 109
    star_vfpdef_COMMA  go to state 110


State 20

  222 atom: LBRACE . opt_dictorsetmaker RBRACE
